--- a/css/style.css
+++ b/css/style.css
@@ -365,3 +365,24 @@ height: 100px;
   margin-top: 40px;
   margin-left: 380px;
 }
+
+/***************************************** properities of fifth section********************************************/
+.seventhtSec{
+  background:#344B8E ;
+  margin-bottom:-120px;
+}
+
+  .footerSec ul li {
+  float:left;
+  list-style-type:none;
+  display: inline-block;
+  margin-left: 30px;
+  color: white;
+}
+
+.footerSec ul li a{
+  text-decoration: none;
+  margin-left: 20px;
+  color: #ffffff;
+  font-size: 20px;
+}
