--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,7 @@ a.link:hover{
   font-size:24px;
   text-align: center;
   text-transform: uppercase;
+  color: white;
 }
 
 /***************************************** properities of team section********************************************/
@@ -172,9 +173,14 @@ a.link:hover{
 }
 
 .teamSec p,
-.teamSec h2
+.teamSec h2,
+.teamSec h3
 {
   color: #3c4761;
+}
+
+.teamSec h2{
+  text-transform: uppercase;
 }
 
 span.location{
@@ -248,7 +254,7 @@ text-align: center;
 }
 
 .span{
-float: center;
+ margin-left: 180px;/* */
 }
 /***************************************** properities of opinions section********************************************/
 .opinionsSec{
